# edm-kahoot-service

./: Cargo.toml
src/: main.rs
src/databases/: mongo.rs
src/models/: rooms.rs
src/routes/: handlers.rs  mod.rs
src/routes/rooms/: handlers.rs  mod.rs  schemas.rs
src/utils/: error.rs  mod.rs  score.rs  serializer.rs
