[package]
name = "edm-kahoot-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7" }
dotenvy = "0.15.7"
mongodb = "3.1.0"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["cors"] }
